--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web creator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap website generator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="zVp885XOiZ9JaUywgZPwV2Y3cZSxN5PQHzf4vgGCFnmXaGAcvWrFbiFCHkbX4N6SqeeaFz0lmam99PFX6aFBzii3+EF0Vxk9bBiTfKXSUog+6hrNef1FBydyeDq/hGiW" data-form-email="true">
+                    <input type="hidden" value="R0CwGte1AyJ7N/qPyO0yDJK0slEtUG1B+q+dbS7nPLhFQ7YOp5FTZLsOCalHwSokMPbA7yu31HjT3O95rJpal8Qs/mi2qx6uRUBnavhkjAiR1mKlJCt8ertJdXGIN2KD" data-form-email="true">
 
                     
 
