--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free responsive site development software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline site maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="AVRo4IqCMRSdtTTa5VeH9ndwdyXhSx2yUiXEH5bFgtfBmcSQKXK0sLxh7vGHkxo5O15z7IwVjoV15zlraF8dNcuL9viDCQ0O/9GK0Y8jwIx9oeUYQ4dtV2QN6rUKCMpk" data-form-email="true">
+                        <input type="hidden" value="uuQTHS24DmnIO1mxC0IMExStqGIr2kou3OEC7uGw/7X7b6zvzIysASSMF+r5ZxsjbVLBr1fwhnCfsNAL465FrtKCGslGfMN7SbwUh9U1DlX73+veJW4KY/TXNHiAUHdh" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="zITvblbUs8At4k4yPoSnvTI2tc3khmYuqajxPgF0JjXXaDRrMYc4uIFNm5qz5ZJeD8cpRyHit7FceUrBLPp/LTawQwLZA4KygtQiqu+ZISNe51RgL/5yseC9afHCIDSW" data-form-email="true">
+                    <input type="hidden" value="qG8nxPb5Ja88RA81v+a+OrvqGbsMXvtq04TM8V56AGm1II38t5kCm1Lo9j7hWl3JitnhHGejGFi22gQ7vy7Cc1LdEoP3LM1i+onoH5dhD6DoGCMIbaXQV7UKqG/JgTRi" data-form-email="true">
 
                     
 
