--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top mobile site maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web page generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="JL/gLN4g67hPHoYCAJ9szn1Em8ZFRq7/cO+pUhneJ7+AJzhy9O3S5t2NiHJiw1Pfnbn1T0i260dguCJnQc3tdeFQEGoCD8XfGFznLqgK9MiHmnVNOH6q7hl8yCMXsiMq" data-form-email="true">
+                    <input type="hidden" value="5s97Q6nIIujK4BEaP8j43MwrfD05ILOP2ghpErCoZDra35OU6bunhVoNo3M5HuIXWyna+WdWL5A+RxEKNFct090dYt1EM5i31wuesuQHdprcsugRx8IZpFL3jzJ6P7lD" data-form-email="true">
 
                     
 
