create github pages

--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web page generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best mobile website builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="5s97Q6nIIujK4BEaP8j43MwrfD05ILOP2ghpErCoZDra35OU6bunhVoNo3M5HuIXWyna+WdWL5A+RxEKNFct090dYt1EM5i31wuesuQHdprcsugRx8IZpFL3jzJ6P7lD" data-form-email="true">
+                    <input type="hidden" value="OiSADyZ4sGmqEvisRZd4zfbKyvrwXxP2MzRu61OeEo+U27tjKsXhBzx5Iw8Kk9/mkWNU1SS4GH+h/rcV7noWqDuT9RM3WeA8M1v19CeKX+YZtjQZdvuUdAF7SqBftn4K" data-form-email="true">
 
                     
 
